I64OU3: Compactable with JDK 17