@@ -29,6 +29,66 @@
 
     <profiles>
         <profile>
+            <id>jdk17</id>
+            <activation>
+                <jdk>17</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <testExcludes>
+                                <exclude>**/krb5/auto/*.java</exclude>
+                                <exclude>org/openeuler/tls/javax/net/ssl/GetInstanceTest.java</exclude>
+                            </testExcludes>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludes>
+                                <exclude>org/openeuler/tls/sun/security/krb5/auto/*.java</exclude>
+                                <exclude>**/CipherSuitesInOrderTest.java</exclude>
+                                <exclude>org.openeuler.gm.SSLSocketDifferentProviderTest.java</exclude>
+                                <exclude>org/openeuler/tls/javax/net/ssl/GetInstanceTest.java</exclude>
+                                <exclude>**/CustomizedDefaultProtocolsTest.java</exclude>
+                                <exclude>**/B8025710Test.java</exclude>
+                            </excludes>
+                            <argLine>
+                                --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-exports=java.base/jdk.internal.access=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.x509=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.action=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.provider=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.provider.certpath=ALL-UNNAMED
+                                --add-exports=java.base/sun.net.util=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.util=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.pkcs=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.internal.spec=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
+                                --add-opens=java.base/javax.crypto=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>jdk11</id>
             <activation>
                 <jdk>11</jdk>
@@ -52,6 +112,8 @@
                                 <exclude>org/openeuler/tls/sun/security/krb5/auto/*.java</exclude>
                                 <exclude>**/CipherSuitesInOrderTest.java</exclude>
                                 <exclude>org.openeuler.gm.SSLSocketDifferentProviderTest.java</exclude>
+                                <exclude>**/CustomizedDefaultProtocolsTest.java</exclude>
+                                <exclude>**/B8025710Test.java</exclude>
                             </excludes>
                             <argLine>
                                 --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
@@ -91,6 +153,8 @@
                         <configuration>
                             <excludes>
                                 <exclude>**/CipherSuitesInOrderTest.java</exclude>
+                                <exclude>**/CustomizedDefaultProtocolsTest.java</exclude>
+                                <exclude>**/B8025710Test.java</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
